# compilers-lang

./: .gitignore  CMakeLists.txt  README.md  code.txt  codigo_teste.txt  codigo_teste2.txt  gen_test.pas  gen_test2.pas  lexer.cpp  lexer.hpp  lexer.l  lexical_analiser.l  parse_table.hpp  parser.cpp  parsing_table.hpp  recursive.cpp  recursive2.cpp  recursive_util.hpp  recursive_util2.hpp  rules.py  symbol_table.hpp  syntactic_table.cpp  table.html  test  test.cpp  test.txt  test2.txt  tokens.hpp
.cache/clangd/index/: lexer.hpp.71BC9B70BEF807F6.idx  parse_table.hpp.6A338FA48483C13C.idx  parser.cpp.4F92A988EE7AFC51.idx  symbol_table.hpp.1DF84AE60F802184.idx  tokenizer_test.cpp.7B74E8D65993FF3A.idx  tokens.hpp.DEDB6FA8B89A5A82.idx
examples/: cod1.txt  cod10_errado.txt  cod11_errado.txt  cod12_errado.txt  cod13.txt  cod14.txt  cod15.txt  cod16.txt  cod17.txt  cod18_errado.txt  cod19_errado.txt  cod2.txt  cod20_errado.txt  cod21_errado.txt  cod22_errado.txt  cod23.txt  cod24.txt  cod25_errado.txt  cod26_errado.txt  cod27_errado.txt  cod28.txt  cod29.txt  cod3.txt  cod30.txt  cod4.txt  cod5.txt  cod6.txt  cod7.txt  cod8_errado.txt  cod9_errado.txt  internal_fun.pas  point.pas  swapexample.pas
include/: lexer.hpp  lr_lexer.hpp  lr_symbol_table.hpp  parse_table.hpp  recursive_src.hpp  semantics.hpp  stack.hpp  state.hpp  symbol_table.hpp  tokens.hpp  utils.hpp
src/: compilers  compilers.yacc  example.cpp  example.hpp  lexer.cpp  lexer.hpp  lexer.l  lr_lexer.l  lr_parser.yacc  parser.cpp  parser.yacc  recursive_parse_gen.cpp  recursive_parser.cpp  recursive_parser_gen.cpp  recursive_src.hpp  symbol_table.hpp  table_parser.cpp  tokenizer_test.cpp  tokens.hpp  y.output  y.tab.c  y.tab.h
src/generation/: assignments_generation.cpp  blocks_generation.cpp  call_generation.cpp  control_flow_generation.cpp  declarations_generation.cpp  expressions_generation.cpp  references_generation.cpp  variable_access_generation.cpp
src/semantics/: assignments.cpp  blocks.cpp  call.cpp  control_flow.cpp  declarations.cpp  expressions.cpp  references.cpp  variable_access.cpp
syntactic_table_creation/: make_table.py  table_as_string.cpp
